Fix CORS for Vercel