@@ -84,14 +84,16 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        return source;
+    	CorsConfiguration configuration = new CorsConfiguration();
+    	configuration.setAllowedOrigins(Arrays.asList(
+    	    	"http://localhost:5173",
+        	"https://hungrezy-iota.vercel.app"
+    ));
+   	 configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    	 configuration.setAllowedHeaders(Arrays.asList("*"));
+   	 configuration.setAllowCredentials(true);
+    	 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    	 source.registerCorsConfiguration("/**", configuration);
+    	return source;
     }
 }
